# homo-genericus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  transfer.py
Abbreviable/: Abbreviable.hpp
Affine/: Affine.hpp  Test_Affine.cpp  Test_Affine.hpp
Armory/: Armory.h  Ex_Armory.cpp
Avatar/: Avatar.hpp  Ex_Avatar.cpp  Test_Avatar.cpp  Test_Avatar.hpp
Callback/: Callback.hpp  Ex_Callback.cpp
Carrier/: Carrier.hpp  Ex_Carrier.cpp
Compound/: Compound.hpp  Ex_Compound.cpp
Concurrency/: Concurrency.hpp  Ex_Concurrency.cpp  Test_Concurrency.cpp  Test_Concurrency.hpp
Family/: Family.hpp  Test_Family.cpp
Flags/: Ex_Flags.cpp  Flags.hpp
Functor/: Ex_Functor.cpp  Functor.h  Functor.hpp  Multiple.hpp  Test_Functor.cpp  Test_Functor.hpp  Test_Multiple.cpp  Test_Multiple.hpp
Geometry/: Geometry.hpp  Geometry_interface.hpp
HOF/: Ex_sgmHOF.cpp  (+4 more)
lib/: CMakeLists.txt
lib/SGM/Specification/: Specification.cpp
lib/Specification/: Specification.cpp
test/: CMakeLists.txt  WorldTest.cpp
test/Abbreviable/: Test_Avatar.cpp  Test_Avatar.hpp  Test_Convoy.cpp  Test_Convoy.hpp  Test_Nullable.cpp  Test_Nullable.hpp  Test_Pinweight.cpp  Test_Pinweight.hpp
test/Array/: Test_Array.cpp  Test_Array.hpp
test/Boomerang/: Test_Boomerang.cpp  Test_Boomerang.hpp
test/Concurrency/: Test_Concurrency.cpp  Test_Concurrency.hpp
test/Family/: Test_Family.cpp  Test_Family.hpp
test/Flag_Set/: Test_Flag_Set.cpp  Test_Flag_Set.hpp
test/Functor/: Test_Functor.cpp  Test_Functor.hpp  Test_Parameters.cpp  Test_Parameters.hpp
test/High_Templar/: Test_High_Templar.cpp  Test_High_Templar.hpp
test/List/: Test_List.cpp  Test_List.hpp
test/Mathexpr/: Test_Mathexpr.cpp  Test_Mathexpr.hpp
test/Operators_of/: Test_Operators_of.cpp  Test_Operators_of.hpp
test/Queue/: Test_Queue.cpp  Test_Queue.hpp
test/Recursion/: Test_Recursion.cpp  Test_Recursion.hpp
test/SGM/Abbreviable/: Test_Avatar.cpp  Test_Avatar.hpp  Test_Convoy.cpp  Test_Convoy.hpp  Test_Nullable.cpp  Test_Nullable.hpp  Test_Pinweight.cpp  Test_Pinweight.hpp
test/SGM/Array/: Test_Array.cpp  Test_Array.hpp
test/SGM/Boomerang/: Test_Boomerang.cpp  Test_Boomerang.hpp
test/SGM/CV_Complete/: Test_CV_Complete.cpp  Test_CV_Complete.hpp
test/SGM/CV_Complete_Ptr/: Test_CV_Complete_Ptr.cpp  Test_CV_Complete_Ptr.hpp
test/SGM/Concurrency/: Poiya_Problem.cpp  Poiya_Problem.hpp  Test_Concurrency.cpp  Test_Concurrency.hpp  Test_Concurrent_Pipeline.cpp  Test_Concurrent_Pipeline.hpp  Test_Fork_and_Join.cpp  Test_Fork_and_Join.hpp
test/SGM/Container/: Test_Array.cpp  Test_Array.hpp  Test_List.cpp  Test_List.hpp  Test_Queue.cpp  Test_Queue.hpp  Test_Span.cpp  Test_Span.hpp  Test_iterable.cpp  Test_iterable.hpp
test/SGM/FP/: Test_Functor.cpp  Test_Functor.hpp  Test_High_Templar.cpp  Test_High_Templar.hpp  Test_Parameters.cpp  Test_Parameters.hpp  Test_Recursion.cpp  Test_Recursion.hpp
test/SGM/Family/: Test_Family.cpp  Test_Family.hpp
test/SGM/Flag_Set/: Test_Flag_Set.cpp  Test_Flag_Set.hpp
test/SGM/Functor/: Test_Functor.cpp  Test_Functor.hpp  Test_Parameters.cpp  Test_Parameters.hpp
test/SGM/High_Templar/: Test_High_Templar.cpp  Test_High_Templar.hpp
test/SGM/List/: Test_List.cpp  Test_List.hpp
test/SGM/Mathexpr/: Test_Mathexpr.cpp  Test_Mathexpr.hpp
test/SGM/Operators_of/: Test_Operators_of.cpp  Test_Operators_of.hpp
test/SGM/Queue/: Test_Queue.cpp  Test_Queue.hpp
test/SGM/Recursion/: Test_Recursion.cpp  Test_Recursion.hpp
test/SGM/Span/: Test_Span.cpp  Test_Span.hpp
test/SGM/Specification/: Test_Specification.hpp
test/SGM/TMP/: Test_Type_Analysis.cpp  Test_Type_Analysis.hpp  Test_interface_Traits.cpp  Test_interface_Traits.hpp
test/SGM/Type_Analysis/: Test_Type_Analysis.cpp  Test_Type_Analysis.hpp
test/SGM/Utility/: Test_Family.cpp  Test_Family.hpp  Test_Flag_Set.cpp  Test_Flag_Set.hpp  Test_Mathexpr.cpp  Test_Mathexpr.hpp
test/SGM/Wrapper/: Test_Avatar.cpp  Test_Avatar.hpp  Test_Boomerang.cpp  Test_Boomerang.hpp  Test_CV_Complete.cpp  Test_CV_Complete.hpp  Test_Convoy.cpp  Test_Convoy.hpp  Test_Nullable.cpp  Test_Nullable.hpp  Test_Operators_of.cpp  Test_Operators_of.hpp  Test_Pinweight.cpp  Test_Pinweight.hpp
test/SGM/interface_Traits/: Test_interface_Traits.cpp  Test_interface_Traits.hpp
test/SGM/iterable/: Test_iterable.cpp  Test_iterable.hpp
test/Span/: Test_Span.cpp  Test_Span.hpp
test/Specification/: Test_Specification.hpp
test/Specification/md_materials/: YOLO.txt
test/Type_Analysis/: Test_Type_Analysis.cpp  Test_Type_Analysis.hpp
test/interface_Traits/: Test_interface_Traits.cpp  Test_interface_Traits.hpp
test/iterable/: Test_iterable.cpp  Test_iterable.hpp
(+388 files in other folders)
